--- a/css/style.css
+++ b/css/style.css
@@ -471,9 +471,8 @@ footer {
 
 .lb-closeContainer {
   position: absolute !important;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 10px;
+  right: 10px;
   z-index: 1001;
   pointer-events: auto;
 }
@@ -486,6 +485,7 @@ footer {
   color: white;
   font-size: 18px;
   opacity: 0.8;
+  text-decoration: none;
 }
 
 .lb-close:hover {
